--- a/artifact/libraries/EJDPR001IMPL/src/main/resources/sql-EJDPR001IMPL.properties
+++ b/artifact/libraries/EJDPR001IMPL/src/main/resources/sql-EJDPR001IMPL.properties
@@ -6,3 +6,5 @@ EJDP.INSERT_CUSTOMER_SQL = conEJDP; INSERT INTO DEMOAPX.CUSTOMERS_ME (ID, ACCOUN
 EJDP.QUERY_INSERT_DEPOSIT = conEJDP; INSERT INTO DEMOAPX.DEPOSITS_ME (ID, CUSTOMER_ID, AMOUNT, INTEREST_RATE, TERM_DAYS, APPLICATION_DATE, MATURITY_DATE, INTEREST_EARNED, STATUS) VALUES (:ID, :CUSTOMER_ID, :AMOUNT, :INTEREST_RATE, :TERM_DAYS, :APPLICATION_DATE, :MATURITY_DATE, :INTEREST_EARNED, :STATUS)
 
 EJDP.QUERY_SELECT_ALL_CUSTOMER_DEPOSITS = conEJDP; SELECT c.ID AS CUSTOMER_ID, c.ACCOUNT_NUMBER, c.CUSTOMER_NAME, d.ID AS DEPOSIT_ID, d.AMOUNT, d.INTEREST_RATE, d.TERM_DAYS, d.APPLICATION_DATE, d.MATURITY_DATE, d.INTEREST_EARNED, d.STATUS FROM DEMOAPX.CUSTOMERS_ME c JOIN DEMOAPX.DEPOSITS_ME d ON c.ID = d.CUSTOMER_ID
+
+EJDP.CHECK_ACCOUNT_NUMBER = conEJDP; SELECT 1 FROM DEMOAPX.CUSTOMERS_ME WHERE ACCOUNT_NUMBER = :ACCOUNT_NUMBER
