--- a/artifact/libraries/EJDPR001IMPL/pom.xml
+++ b/artifact/libraries/EJDPR001IMPL/pom.xml
@@ -34,6 +34,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
+			<version>5.12.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -68,6 +69,7 @@
 						</Import-Package>
 					</instructions>
 				</configuration>
+
 			</plugin>
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
