agregar api connector

--- a/artifact/libraries/EJDPR002IMPL/pom.xml
+++ b/artifact/libraries/EJDPR002IMPL/pom.xml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.bbva.ejdp</groupId>
-		<artifactId>TRANSACTIONS-training-13052025</artifactId>
+		<artifactId>LIBRARIES-training-13052025</artifactId>
 		<version>0.0.0</version>
 	</parent>
 	<groupId>com.bbva.ejdp</groupId>
-	<artifactId>EJDPT002-01-PE</artifactId>
+	<artifactId>EJDPR002IMPL</artifactId>
 	<version>0.0.0</version>
+	<name>EJDPR002IMPL</name>
 	<packaging>bundle</packaging>
-	<description>Mostrar lista de usuarios y los depositos</description>
+	<description>Logica para importar api internas</description>
 	<properties>
-		<arc.osgi.version>0.0</arc.osgi.version>
+		<osgi.version.manifest>0.0</osgi.version.manifest>
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>com.bbva.ejdp</groupId>
+			<artifactId>EJDPR002</artifactId>
+			<version>0.0.0</version>
+		</dependency>
+		<dependency>
 			<groupId>com.bbva.elara</groupId>
-			<artifactId>elara-transaction</artifactId>
+			<artifactId>elara-library</artifactId>
 			<version>${apx.core.online.version}</version>
-			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.bbva.elara</groupId>
+			<artifactId>elara-configuration-manager-application</artifactId>
+			<version>${apx.core.online.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>5.12.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>com.bbva.ejdp</groupId>
-			<artifactId>EJDPR001</artifactId>
-			<version>0.0.0</version>
+			<groupId>com.bbva.elara</groupId>
+			<artifactId>elara-utility-api-connector</artifactId>
+			<version>${apx.api.connector.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.bbva.ejdp.dto.deposit</groupId>
@@ -47,14 +56,23 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Activator>com.bbva.ejdp.EJDPT00201PETransaction</Bundle-Activator>
-						<Bundle-Category>transaction</Bundle-Category>
+						<Bundle-SymbolicName>${project.artifactId}-${project.version}</Bundle-SymbolicName>
+						<Bundle-Category>library-intapiconnector</Bundle-Category>
 						<Export-Package>
-							!*;version="${arc.osgi.version}"
+							!*;version="${osgi.version.manifest}"
 						</Export-Package>
 						<Import-Package>
-							*;version="${arc.osgi.version}"
+							com.bbva.elara.aspect;version="${osgi.version.manifest}",
+							javax.xml.transform;version="${osgi.version.manifest}",
+							org.aopalliance.aop;version="${osgi.version.manifest}",
+							org.osgi.framework;version="${osgi.version.manifest}",
+							org.springframework.aop;version="${osgi.version.manifest}",
+							org.springframework.aop.framework;version="${osgi.version.manifest}",
+							org.springframework.core;version="${osgi.version.manifest}",
+							org.springframework.http;version="${osgi.version.manifest}",
+							org.springframework.web.client;version="${osgi.version.manifest}",
+							spring;version="${osgi.version.manifest}",
+							*;version="${osgi.version.manifest}"
 						</Import-Package>
 					</instructions>
 				</configuration>
@@ -64,14 +82,14 @@
 				<executions>
 					<execution>
 						<phase>install</phase>
+						<configuration>
+							<tasks>
+								<copy todir="${outputDirectoryLibraries}" file="./target/${project.artifactId}.jar"/>
+							</tasks>
+						</configuration>
 						<goals>
 							<goal>run</goal>
 						</goals>
-						<configuration>
-							<tasks>
-								<copy file="./target/${project.artifactId}.jar" todir="${outputDirectoryTransactions}"/>
-							</tasks>
-						</configuration>
 					</execution>
 				</executions>
 			</plugin>
@@ -91,7 +109,6 @@
 							<goal>prepare-agent-integration</goal>
 						</goals>
 					</execution>
-
 					<execution>
 						<id>default-report</id>
 						<goals>
