--- a/artifact/transactions/EJDPT004-01-PE/pom.xml
+++ b/artifact/transactions/EJDPT004-01-PE/pom.xml
@@ -7,10 +7,10 @@
 		<version>0.0.0</version>
 	</parent>
 	<groupId>com.bbva.ejdp</groupId>
-	<artifactId>EJDPT002-01-PE</artifactId>
+	<artifactId>EJDPT004-01-PE</artifactId>
 	<version>0.0.0</version>
 	<packaging>bundle</packaging>
-	<description>Mostrar lista de usuarios y los depositos</description>
+	<description>Transaccion para consumir una api interna</description>
 	<properties>
 		<arc.osgi.version>0.0</arc.osgi.version>
 	</properties>
@@ -24,17 +24,16 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>5.12.0</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.bbva.ejdp</groupId>
-			<artifactId>EJDPR001</artifactId>
-			<version>0.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.bbva.ejdp.dto.deposit</groupId>
 			<artifactId>EJDPC001</artifactId>
+			<version>0.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.bbva.ejdp</groupId>
+			<artifactId>EJDPR002</artifactId>
 			<version>0.0.0</version>
 		</dependency>
 	</dependencies>
@@ -48,7 +47,7 @@
 				<configuration>
 					<instructions>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Bundle-Activator>com.bbva.ejdp.EJDPT00201PETransaction</Bundle-Activator>
+						<Bundle-Activator>com.bbva.ejdp.EJDPT00401PETransaction</Bundle-Activator>
 						<Bundle-Category>transaction</Bundle-Category>
 						<Export-Package>
 							!*;version="${arc.osgi.version}"
@@ -91,7 +90,6 @@
 							<goal>prepare-agent-integration</goal>
 						</goals>
 					</execution>
-
 					<execution>
 						<id>default-report</id>
 						<goals>
